--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,3 +2,16 @@ canvas {
   display: block;
   margin: 0 auto;
 }
+
+
+footer {
+  display: flex;
+  flex-direction: row;
+  position: fixed;
+  bottom: 10px;
+  right: 5%;
+}
+
+footer img {
+  width: 60px;
+}
